--- a/index.html
+++ b/index.html
@@ -373,8 +373,8 @@
 							<a class="tile" href="https://kitsu.app/anime/tower-of-god-season-2"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/46312/poster_image/large-f113d2c0b280301d7827f17723fa5754.jpeg" alt="Tower of God Season 2"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/shikanoko-nokonoko-koshitantan"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48618/poster_image/large-ea22ba9273d97b476842c3647d4172da.jpeg" alt="My Deer Friend Nokotan"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/vtuber-nanda-ga-haishin-kiri-wasuretara-densetsu-ni-natteta"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/47004/poster_image/large-0fea164d0a348eb8334d2f93072b5abd.jpeg" alt="VTuber Legend"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/Kimetsu-no-Yaiba-Hashira-Geikohen"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/47635/poster_image/large-4211877e3a64e0f5beacfaca550aae16.jpeg" alt="Demon Slayer: Hashira Training Arc"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/boku-no-hero-academia-7th-season"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/47232/poster_image/large-e72a84111240e5a313fca1a65341303d.jpeg" alt="Hero Academia Season 7"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/one-piece"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/poster_images/12/large.jpg" alt="One Piece"></img></a>
 						</div><!-- tiled-list -->
 					</div><!-- Currently Watching-->			
 
@@ -470,7 +470,7 @@
 						<div class="tiled-list scrolling-tiled-list">
 							<a class="tile" href="https://kitsu.app/anime/re-zero-kara-hajimeru-isekai-seikatsu-3"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/47235/poster_image/large-2fbd9ca9f8f9b39d931a34221ebb3d8f.jpeg" alt="Re:ZERO 3"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/dungeon-ni-deai-wo-motomeru-no-wa-machigatteiru-darou-ka-v"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48216/poster_image/large-e1f8bc3f7482cf8a8855e2ea7f8bf213.jpeg" alt="DanMachi Goddess of the Harvest Arc"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/ShangriLa-Frontier-2nd-Season"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48677/poster_image/large-3259ef2f0ee455e2443e71c3ca568724.jpeg" alt="Shangri-La Frontier Season 2"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/ShangriLa-Frontier-2nd-Season"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48677/poster_image/large-a94b224e23285e463dcc2d96276dfb39.jpeg" alt="Shangri-La Frontier Season 2"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/bleach-sennen-kessen-hen-soukokutan"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48015/poster_image/large-f4bad27416d719f3a6d54ce9a8c66ec0.jpeg" alt="BLEACH: Thousand-Year Blood War Part 3 - The Conflict"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/Sword-Art-Online-Alternative-Gun-Gale-Online-II"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/47748/poster_image/large-17d3994e532e53d70481d80fb22c1dda.jpeg" alt="https://media.kitsu.app/anime/47748/poster_image/large-17d3994e532e53d70481d80fb22c1dda.jpeg"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/ao-no-hako"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48239/poster_image/large-4d8ab936657d3859022ce16adf497823.jpeg" alt="Blue Box"></img></a>
@@ -904,6 +904,13 @@
 
 			<div id="tab_linksandfollows" class="tab tab-actionable sidebar-content">
 				<div class="lf-feature">
+					<a class="lf-feature-link" href="https://www.crunchyroll.com/news/announcements/2024/8/22/overlord-the-sacred-kingdom-north-america-release-date-announced">
+						<h3 class="lf-feature-title">Overlord Movie North American Release</h3>
+						<span class="lf-feature-source"><i class="fa-solid fa-link"></i> Crunchyroll News</span>
+						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/overlordmovie.png"></img>
+					</a>			
+				</div>				
+				<div class="lf-feature">
 					<a class="lf-feature-link" href="https://kitsu.app/posts/9837041">
 						<h3 class="lf-feature-title">Kitsu Now At New Domain Kitsu.app</h3>
 						<span class="lf-feature-source"><i class="fa-solid fa-link"></i> KITSU.APP</span>
@@ -1104,15 +1111,15 @@
 							</div>
 						</div>
 					</a>
-					<a class="lf-link" href="https://www.reddit.com/r/animeicons/">
+					<a class="lf-link" href="https://twitter.com/MangaAlerts">
 						<div class="lf-item-container">								
-							<img loading="Lazy" class="lf-image" src="assets/images/icons/r-animeicons-icon.png"></img>
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/twitterpropic-MangaAlerts.jpg"></img>
 							<div class="lf-text">
-								<span class="lf-displayname">r/animeicons</span>
-								<span class="lf-handle"><i class="fa-brands fa-reddit-alien lf-handle-icon"></i> /r/animeicons</span>
+								<span class="lf-displayname">Manga Alerts</span>
+								<span class="lf-handle"><i class="fa-brands fa-twitter lf-handle-icon"></i> @MangaAlerts</span>
 							</div>
 						</div>
-					</a>
+					</a>					
 					<button onclick="more_forcollections_btn()" id="more_forcollections_btn" class="more-lf-link-btn">Show more</button>
 					<a class="lf-link more-lf-forcollections" href="https://twitter.com/MangaMoguraRE">
 						<div class="lf-item-container">								
@@ -1123,15 +1130,15 @@
 							</div>
 						</div>
 					</a>
-					<a class="lf-link more-lf-forcollections" href="https://twitter.com/MangaAlerts">
+					<a class="lf-link more-lf-forcollections" href="https://www.reddit.com/r/animeicons/">
 						<div class="lf-item-container">								
-							<img loading="Lazy" class="lf-image" src="assets/images/icons/twitterpropic-MangaAlerts.jpg"></img>
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/r-animeicons-icon.png"></img>
 							<div class="lf-text">
-								<span class="lf-displayname">Manga Alerts</span>
-								<span class="lf-handle"><i class="fa-brands fa-twitter lf-handle-icon"></i> @MangaAlerts</span>
+								<span class="lf-displayname">r/animeicons</span>
+								<span class="lf-handle"><i class="fa-brands fa-reddit-alien lf-handle-icon"></i> /r/animeicons</span>
 							</div>
 						</div>
-					</a>
+					</a>					
 					<a class="lf-link more-lf-forcollections" href="https://fandompost.vbulletin.net/forum/anime-manga-discussions/us-blu-ray-dvd-and-simulcast-industry-news/858486-crunchyroll-may-2024-solicitations-no-solicitations-for-april-24">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/WTK_the-fandom-post.jpg"></img>
@@ -1197,18 +1204,8 @@
 								<span class="lf-handle"><i class="fa-brands fa-tiktok lf-handle-icon"></i> @weeb_god_of_anime</span>
 							</div>
 						</div>
-					</a>					
-					<a class="lf-link" href="https://www.tiktok.com/@animesenpaipodcast?_t=8e9R7dirUc7&_r=1">
-						<div class="lf-item-container">
-							<img loading="Lazy" class="lf-image" src="assets/images/icons/tiktokpropic-animesenpaipodcast.jpeg"></img>
-							<div class="lf-text">
-								<span class="lf-displayname">Anime Senpai</span>
-								<span class="lf-handle"><i class="fa-brands fa-tiktok lf-handle-icon"></i> @animesenpaipodcast</span>
-							</div>
-						</div>
 					</a>
-					<button onclick="more_anitube_btn()" id="more_anitube_btn" class="more-lf-link-btn">Show more</button>
-					<a class="lf-link more-lf-anitube" href="https://www.youtube.com/@Aaox">
+					<a class="lf-link" href="https://www.youtube.com/@Aaox">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/youtubepropic-Aaox.jpg"></img>
 							<div class="lf-text">
@@ -1216,7 +1213,17 @@
 								<span class="lf-handle"><i class="fa-brands fa-youtube lf-handle-icon"></i> @Aaox</span>
 							</div>
 						</div>
-					</a>
+					</a>					
+					<button onclick="more_anitube_btn()" id="more_anitube_btn" class="more-lf-link-btn">Show more</button>
+					<a class="lf-link more-lf-anitube" href="https://www.tiktok.com/@animesenpaipodcast?_t=8e9R7dirUc7&_r=1">
+						<div class="lf-item-container">
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/tiktokpropic-animesenpaipodcast.jpeg"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">Anime Senpai</span>
+								<span class="lf-handle"><i class="fa-brands fa-tiktok lf-handle-icon"></i> @animesenpaipodcast</span>
+							</div>
+						</div>
+					</a>					
 					<a class="lf-link more-lf-anitube" href="https://www.youtube.com/@UnderTheScopeReviews">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/youtubepropic-UnderTheScopeReviews.jpg"></img>
@@ -1587,7 +1594,7 @@
 							</div>
 						</div>
 					</a>
-				<!--
+				
 					<a class="lf-link more-lf-artistfanart" href="https://x.com/bluethebone">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/twitterpropic-bluethebone.jpg"></img>
@@ -1633,7 +1640,7 @@
 							</div>
 						</div>
 					</a>					
-				-->
+				
 				</div><!-- Fanart -->
 			</div><!-- links and follows -->
 
