--- a/index.html
+++ b/index.html
@@ -240,13 +240,13 @@
 							</a>
 						</div>
 					</div>
-					<!--
+					
 					<div class="spotlight-artical">
 						<h2 class="spotlight-article-title">
 							Palace Secrets and Herbal Remedies!
 						</h2>
 						<p class="spotlight-article-text">
-							Loving the clever heroine and the intriguing mysteries in the imperial court. Gorgeous visuals and a gripping story keep me hooked every episode. Can’t wait to see what happens next!
+							A fisty catgirl with gremlin energy who would rather spend her time finding new ways of poisoning herself than solving the entangled mysteries of palace politics and romance.
 						</p>
 						<div class="spotlight-article-media-container">
 							<img class="spotlight-article-media" src="assets/images/spotlight-article-media/The_Apothecary_Diaries/article-media_01.jpg" alt=""></img>
@@ -260,7 +260,7 @@
 							</a>
 						</div>
 					</div>
-					-->
+					
 					<div class="spotlight-artical">
 						<h2 class="spotlight-article-title">
 							When You’re So Cracked On Bugged Games That You Break The Working Ones
@@ -1195,12 +1195,12 @@
 							</div>
 						</div>
 					</a>
-					<a class="lf-link" href="https://www.tiktok.com/@weeb_god_of_anime?_t=8dyyknvAtFD&_r=1">
+					<a class="lf-link" href="https://www.tiktok.com/@taylor.anime.reviews">
 						<div class="lf-item-container">
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/tiktokpropic-weeb_god_of_anime.jpeg"></img>
 							<div class="lf-text">
-								<span class="lf-displayname">Weeb God Of Anime</span>
-								<span class="lf-handle"><i class="fa-brands fa-tiktok lf-handle-icon"></i> @weeb_god_of_anime</span>
+								<span class="lf-displayname">Taylor.Anime.Reviews</span>
+								<span class="lf-handle"><i class="fa-brands fa-tiktok lf-handle-icon"></i> @taylor.anime.reviews</span>
 							</div>
 						</div>
 					</a>
