Swopped out twitter for bsky
Changed social link from twitter to bluesky

--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
 				<p id="biotext">I crave visually pleasing art and enjoyable characters, but overall an immersive story. I'm a sucker for romance, get pumped for action packed fight scenes, and savor unexpected laughs; with the occasional trash.</p>
 				<div id="bio_socials">
 					<a href="https://kitsu.app/users/heyKPerks" id="bio-social-kitsu"class="bio-social-item"><img src="assets/images/icons/kitsu.ico"></img></a>
-					<a href="https://twitter.com/heyKPerks" id="bio-social-twitter"class="bio-social-item"><i class="fa-brands fa-twitter"></i></a>						
+					<a href="https://bsky.app/profile/heykperks.bsky.social" id="bio-social-bsky"class="bio-social-item"><i class="fa-brands fa-bluesky"></i></a>
+					<!--
+					<a href="https://twitter.com/heyKPerks" id="bio-social-twitter"class="bio-social-item"><i class="fa-brands fa-twitter"></i></a>	
+					-->
 					<button onclick="show_discord_modal()" id="social_discord_btn" class="bio-social-item"><i class="fa-brands fa-discord"></i></button>
 					<a href="https://github.com/heyKPerks/MyAnimeProfile" id="bio_social-github"class="bio-social-item"><i class="fa-brands fa-github"></i></a>
 				</div>
