Updated footer socials

--- a/index.html
+++ b/index.html
@@ -1706,7 +1706,8 @@
 				<p class="footer-text">Thanks for stopping by. Feel free to connect and chat or judge my trash taste and spaghetti code.</p>
 				<div id="footer_socials">
 					<a href="https://kitsu.app/users/heyKPerks" id="footer_social-kitsu"class="footer-social-item"><img src="assets/images/icons/kitsu.ico"></img></a>
-					<a href="https://twitter.com/heyKPerks" id="footer_social-twitter"class="footer-social-item"><i class="fa-brands fa-twitter"></i></a>
+					<a href="https://bsky.app/profile/heykperks.bsky.social" id="bio-social-bsky"class="bio-social-item"><i class="fa-brands fa-bluesky"></i></a>
+					<!-- <a href="https://twitter.com/heyKPerks" id="footer_social-twitter"class="footer-social-item"><i class="fa-brands fa-twitter"></i></a>-->
 					<button onclick="show_discord_modal()" id="footer_social_discord_btn" class="bio-social-item"><i class="fa-brands fa-discord"></i></button>
 					<a href="https://github.com/heyKPerks/MyAnimeProfile" id="footer_social-github"class="footer-social-item"><i class="fa-brands fa-github"></i></a>
 				</div>
