--- a/index.html
+++ b/index.html
@@ -40,10 +40,8 @@
 				<p id="biotext">I crave visually pleasing art and enjoyable characters, but overall an immersive story. I'm a sucker for romance, get pumped for action packed fight scenes, and savor unexpected laughs; with the occasional trash.</p>
 				<div id="bio_socials">
 					<a href="https://kitsu.app/users/heyKPerks" id="bio-social-kitsu"class="bio-social-item"><img src="assets/images/icons/kitsu.ico"></img></a>
-					<a href="https://bsky.app/profile/heykperks.bsky.social" id="bio-social-bsky"class="bio-social-item"><i class="fa-brands fa-bluesky"></i></a>
-					<!--
-					<a href="https://twitter.com/heyKPerks" id="bio-social-twitter"class="bio-social-item"><i class="fa-brands fa-twitter"></i></a>	
-					-->
+					<a href="https://twitter.com/heyKPerks" id="bio-social-twitter"class="bio-social-item"><i class="fa-brands fa-twitter"></i></a>
+					<!-- <a href="https://bsky.app/profile/heykperks.bsky.social" id="bio-social-bsky"class="bio-social-item"><i class="fa-brands fa-bluesky"></i></a> -->
 					<button onclick="show_discord_modal()" id="social_discord_btn" class="bio-social-item"><i class="fa-brands fa-discord"></i></button>
 					<a href="https://github.com/heyKPerks/MyAnimeProfile" id="bio_social-github"class="bio-social-item"><i class="fa-brands fa-github"></i></a>
 				</div>
@@ -1660,7 +1658,15 @@
 							</div>
 						</div>
 					</a>
-					<!--
+					<a class="lf-link more-lf-artistfanart" href="https://x.com/parkjinsuky">
+						<div class="lf-item-container">								
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/parkjinsuky.jpg"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">pjsdraw <span class="nsfw-tag">nsfw</span></span>
+								<span class="lf-handle"><i class="fa-brands fa-twitter lf-handle-icon"></i> @parkjinsuky</span>
+							</div>
+						</div>
+					</a>					
 					<a class="lf-link more-lf-artistfanart" href="https://x.com/TheGoldenSmurf">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/TheGoldenSmurf.jpg"></img>
@@ -1679,6 +1685,7 @@
 							</div>
 						</div>
 					</a>
+					<!--
 					<a class="lf-link more-lf-artistfanart" href="https://x.com/lewdamone">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/lewdamone.jpg"></img>
@@ -1706,8 +1713,8 @@
 				<p class="footer-text">Thanks for stopping by. Feel free to connect and chat or judge my trash taste and spaghetti code.</p>
 				<div id="footer_socials">
 					<a href="https://kitsu.app/users/heyKPerks" id="footer_social-kitsu"class="footer-social-item"><img src="assets/images/icons/kitsu.ico"></img></a>
-					<a href="https://bsky.app/profile/heykperks.bsky.social" id="bio-social-bsky"class="bio-social-item"><i class="fa-brands fa-bluesky"></i></a>
-					<!-- <a href="https://twitter.com/heyKPerks" id="footer_social-twitter"class="footer-social-item"><i class="fa-brands fa-twitter"></i></a>-->
+					<!-- <a href="https://bsky.app/profile/heykperks.bsky.social" id="bio-social-bsky"class="bio-social-item"><i class="fa-brands fa-bluesky"></i></a> -->
+					<a href="https://twitter.com/heyKPerks" id="footer_social-twitter"class="footer-social-item"><i class="fa-brands fa-twitter"></i></a>
 					<button onclick="show_discord_modal()" id="footer_social_discord_btn" class="bio-social-item"><i class="fa-brands fa-discord"></i></button>
 					<a href="https://github.com/heyKPerks/MyAnimeProfile" id="footer_social-github"class="footer-social-item"><i class="fa-brands fa-github"></i></a>
 				</div>
