--- a/index.html
+++ b/index.html
@@ -410,7 +410,6 @@
 							<a class="tile" href="https://kitsu.app/anime/3-gatsu-no-lion"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/poster_images/11380/large.jpg?1597696842" alt="March comes in like a lion"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/kimi-ni-todoke"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/poster_images/4397/large.jpg" alt="Kimi ni Todoke: From Me to You"></img></a>							
 							<a class="tile" href="https://kitsu.app/anime/mob-psycho-100-iii"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/45338/poster_image/large-b7ba28948da84b740c9ae7882b365fb9.jpeg" alt="Mob Psycho 100 III"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/blue-lock"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/44973/poster_image/large-ca235304c71f4233e60f6efb3967654d.jpeg" alt="Blue Lock"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/horimiya-piece"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/47234/poster_image/large-e447f5ac2db9b859bb0d88661434caf7.jpeg" alt="Horimiya -piece-"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/maoujou-de-oyasumi"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/poster_images/42551/large.jpg" alt="Sleepy Princess in the Demon Castle"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/shinigami-bocchan-to-kuro-maid-season-2"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/45229/poster_image/large-a617890c5fcf3599bac9b58586bea1d5.jpeg" alt="The Duke of Death and His Maid Season 2"></img></a>
@@ -422,6 +421,7 @@
 							<a class="tile" href="https://kitsu.app/anime/chihayafuru"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/poster_images/6355/large.jpg" alt="Chihayafuru"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/kaichou-wa-maid-sama"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/poster_images/4852/large.jpg" alt="Maid Sama!"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/natsume-yuujinchou"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/poster_images/3453/large.jpg" alt="Natsume's Book of Friends"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/boku-no-kokoro-no-yabai-yatsu"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/46299/poster_image/large-116b49ab958abf27bbbb38e9215a0fe1.jpeg" alt="The Dangers in My Heart"></img></a>
 							<!--
 								<a class="tile" href=""><img loading="Lazy" class="tile-image" src="" alt=""></img></a>
 								<a class="tile" href="https://kitsu.app/anime/rurouni-kenshin-meiji-kenkaku-romantan-2023"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/45616/poster_image/large-1881293614632c347d895db0315419a7.jpeg" alt="Rurouni Kenshin"></img></a>
@@ -442,14 +442,13 @@
 						</div><!-- tiled-list -->
 						<h3 class="section-subheading">Waiting for Dub to Finish</h3> 
 						<div class="tiled-list scrolling-tiled-list">
+							<a class="tile" href="https://kitsu.app/anime/hibike-euphonium"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/poster_images/9980/large.jpg" alt="Sound! Euphonium"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/karakai-jouzu-no-takagi-san-2"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/poster_images/42110/large.jpg" alt="Teasing Master Takagi-san 2"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/helck"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/45876/poster_image/large-2b41b177707ddf123c3633f6bb641e4d.jpeg" alt="Helck"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/boku-no-kokoro-no-yabai-yatsu"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/46299/poster_image/large-116b49ab958abf27bbbb38e9215a0fe1.jpeg" alt="The Dangers in My Heart"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/sentai-daishikkaku"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/46840/poster_image/large-469f7caa559e882eb322d55e677c3fea.jpeg" alt="Go! Go! Loser Ranger!"></img></a>							
 							<a class="tile" href="https://kitsu.app/anime/yozakura-san-chi-no-daisakusen"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/46869/poster_image/large-2387b561d9afebe2d646de3b2cff35af.jpeg" alt="Mission: Yozakura Family"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/Dead-Dead-Demons-Dededededestruction-Zenshou"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/45989/poster_image/large-501cec7dd2c71af240b02745256ade91.jpeg" alt="Dead Dead Demon's Dededede Destruction"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/kono-sekai-wa-fukanzen-sugiru"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/47236/poster_image/large-8f2f4bb1adabfd4d8fb75a17cfee25f0.jpeg" alt="Quality Assurance in Another World"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/isekai-yururi-kikou-kosodate-shinagara-boukensha-shimasu"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48390/poster_image/large-b199b98d15d371a75711b09c26eb001c.jpeg" alt="Raising Kids While Adventuring"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/naze-boku-no-sekai-wo-daremo-oboeteinai-no-ka"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/47786/poster_image/large-ed6384832e4aad256106735ddc814825.jpeg" alt="Why nobody remembers my world?"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/oshi-no-ko-season-2"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/47659/poster_image/large-8881975ead44514c3d76220a7b86e19d.jpeg" alt="Oshi no Ko Season 2"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/tokidoki-bosotto-russiago-de-dereru-tonari-no-alya-san"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/47192/poster_image/large-491024f89779a705db56110d20f06f0e.jpeg" alt="Alya Sometimes Hides Her Feelings in Russian"></img></a>
@@ -458,9 +457,7 @@
 							<a class="tile" href="https://kitsu.app/anime/bartender-shin-anime"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/46644/poster_image/large-0f238c5a6e79a9c0fcd5fe5fc33a3f9a.jpeg" alt="BARTENDER Glass of God"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/make-heroine-ga-oosugiru"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48312/poster_image/large-ef857d4d1a7bbfc872005bd8ec222654.jpeg" alt="Makeine: Too Many Losing Heroines!"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/isekai-shikkaku"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/46243/poster_image/large-3c0f5639e07a85a1656e22b52483b857.jpeg" alt="No Longer Human…In Another World"></img></a>
-							<!--								
-								<a class="tile" href="https://kitsu.app/anime/ore-wa-subete-wo-parry-suru-gyaku-kanchigai-no-sekai-saikyou-wa-boukensha-ni-naritai"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48202/poster_image/large-a044a94c2cc0319f290269422ec5d1bc.jpeg" alt="I Parry Everything"></img></a>
-							-->							
+							<a class="tile" href="https://kitsu.app/anime/ore-wa-subete-wo-parry-suru-gyaku-kanchigai-no-sekai-saikyou-wa-boukensha-ni-naritai"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48202/poster_image/large-a044a94c2cc0319f290269422ec5d1bc.jpeg" alt="I Parry Everything"></img></a>
 						</div><!-- tiled-list -->
 					</div><!-- Binge Watching -->
 					<div class="watching-item"><!--Most Anticipated-->
@@ -468,16 +465,16 @@
 						<h3 class="section-subheading">Fall 2024</h3> 
 						<div class="tiled-list scrolling-tiled-list">
 							<a class="tile" href="https://kitsu.app/anime/re-zero-kara-hajimeru-isekai-seikatsu-3"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/47235/poster_image/large-2fbd9ca9f8f9b39d931a34221ebb3d8f.jpeg" alt="Re:ZERO 3"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/dungeon-ni-deai-wo-motomeru-no-wa-machigatteiru-darou-ka-v"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48216/poster_image/large-e1f8bc3f7482cf8a8855e2ea7f8bf213.jpeg" alt="DanMachi Goddess of the Harvest Arc"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/dungeon-ni-deai-wo-motomeru-no-wa-machigatteiru-darou-ka-v"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48216/poster_image/large-aefa90ab3f001b8942d79c459724faf6.jpeg" alt="DanMachi Goddess of the Harvest Arc"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/ShangriLa-Frontier-2nd-Season"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48677/poster_image/large-a94b224e23285e463dcc2d96276dfb39.jpeg" alt="Shangri-La Frontier Season 2"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/bleach-sennen-kessen-hen-soukokutan"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48015/poster_image/large-f4bad27416d719f3a6d54ce9a8c66ec0.jpeg" alt="BLEACH: Thousand-Year Blood War Part 3 - The Conflict"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/Sword-Art-Online-Alternative-Gun-Gale-Online-II"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/47748/poster_image/large-17d3994e532e53d70481d80fb22c1dda.jpeg" alt="https://media.kitsu.app/anime/47748/poster_image/large-17d3994e532e53d70481d80fb22c1dda.jpeg"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/ao-no-hako"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48239/poster_image/large-4d8ab936657d3859022ce16adf497823.jpeg" alt="Blue Box"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/ao-no-hako"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48239/poster_image/large-b547e3cfeb2776aa95f8618d0a6ff0fe.jpeg" alt="Blue Box"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/blue-lock-2"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/47245/poster_image/large-5c61f758d63a84e7232cf6f7dd21a2c4.jpeg" alt="Blue Lock Season 2"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/DAN-DA-DAN"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48269/poster_image/large-4ac8b4b48f56051ae98ac329d7add1ec.jpeg" alt="DAN DA DAN"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/kekkon-suru-tte-hontou-desu-ka-365-days-to-the-wedding"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/47586/poster_image/large-fc8f42dbb452582ab26a14fa9a90186d.jpeg" alt="365 Days to the Wedding"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/kekkon-suru-tte-hontou-desu-ka-365-days-to-the-wedding"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/47586/poster_image/large-f66afbb13a00c3b1e7c1fa126dacf2d9.jpeg" alt="365 Days to the Wedding"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/hitoribocchi-no-isekai-kouryaku"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48449/poster_image/large-b4a359c99eee35b62ee866a0819694a6.jpeg" alt="Loner Life in Another World"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/maou-2099"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/47239/poster_image/large-49f88fa77db3e6a721a935c2eb1f2e0b.jpeg" alt="Demon Lord 2099"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/maou-2099"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/47239/poster_image/large-c8afaba70bf67100e50cde7580d39dbb.jpeg" alt="Demon Lord 2099"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/kimi-wa-meido-sama"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48395/poster_image/large-8baca88f28d0cabe4cf5ab0e815598a9.jpeg" alt="You Are Ms. Servant"></img></a>
 						</div><!-- tiled-list -->
 						<h3 class="section-subheading">Later</h3> 
@@ -508,14 +505,13 @@
 							<a class="tile" href="https://kitsu.app/anime/madougushi-dahlia-wa-utsumukanai"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/47892/poster_image/large-3d0715b5e5a3859da3474e3cda50bc8a.jpeg" alt="Dahlia in Bloom: Crafting a Fresh Start with Magical Tools"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/kimi-wa-houkago-insomnia"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/45746/poster_image/large-45e04c601dd80245037ab7b8ec5a0c4a.jpeg" alt="Insomniacs After School"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/bocchi-the-rock"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/44196/poster_image/large-04fc7c066e52d4d2b9d0217b383597bb.jpeg" alt="Bocchi the Rock!"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/hibike-euphonium"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/poster_images/9980/large.jpg" alt="Sound! Euphonium"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/kemono-no-souja-erin"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/poster_images/4095/large.jpg" alt="Erin"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/giji-harem"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/47296/poster_image/large-1f3461f7db462aa14d818823209b63ff.jpeg" alt="Pseudo Harem"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/nisekoi"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/poster_images/7821/large.jpg" alt="Nisekoi: False Love"></img></a>
 							<!--
 								<a class="tile" href="https://kitsu.app/anime/kyousougiga-tv"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/poster_images/7870/large.jpg" alt="Kyousougiga"></img></a>								
 								<a class="tile" href="https://kitsu.app/anime/kishuku-gakkou-no-juliet"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/poster_images/41065/large.jpg?1597691087" alt="Boarding School Juliet"></img></a>
 								<a class="tile" href="https://kitsu.app/anime/5-toubun-no-hanayome-tv"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/47275/poster_image/large-eb4818f7a38a5b9a6e0217e2a2a20db1.jpeg" alt="The Quintessential Quintuplets Special"></img></a>
-								<a class="tile" href="https://kitsu.app/anime/nisekoi"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/poster_images/7821/large.jpg" alt="Nisekoi: False Love"></img></a>
 								<a class="tile" href="https://kitsu.app/anime/banana-fish"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/poster_images/13988/large.jpg" alt="Banana Fish"></img></a>								
 								<a class="tile" href="https://kitsu.app/anime/otonari-no-tenshisama-ni-itsunomanika-dame-ningen-ni-sareteita-Ken"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/45715/poster_image/large-d863bff0eb6e0e49b30da61229bbd598.jpeg" alt="The Angel Next Door Spoils Me Rotten"></img></a>
 								<a class="tile" href="https://kitsu.app/anime/amaama-to-inazuma"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/poster_images/11870/large.jpg" alt="Sweetness & Lightning"></img></a>
@@ -904,19 +900,57 @@
 
 			<div id="tab_linksandfollows" class="tab tab-actionable sidebar-content">
 				<div class="lf-feature">
+					<a class="lf-feature-link" href="https://www.crunchyroll.com/news/seasonal-lineup/2024/9/18/fall-2024-anime-crunchyroll">
+						<h3 class="lf-feature-title">Crunchyroll Fall 2024 Season Lineup</h3>
+						<span class="lf-feature-source"><i class="fa-solid fa-link"></i> Crunchyroll News</span>
+						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/Crunchyroll_Fall_2024_Season.jfif"></img>
+					</a>			
+				</div>
+				<div class="lf-feature">
+					<a class="lf-feature-link" href="https://news.hidive.com/2024/9/19/hidive-reveals-the-exact-date-and-time-you-can-watch-our-fall-2024-simulcasts">
+						<h3 class="lf-feature-title">Hidive Fall 2024 Season</h3>
+						<span class="lf-feature-source"><i class="fa-solid fa-link"></i> Hidive News</span>
+						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/Hidive_Fall_2024_Season.jfif"></img>
+					</a>			
+				</div>
+				<div class="lf-feature">
+					<a class="lf-feature-link" href="https://x.com/AIR_News01/status/1838264016826962142">
+						<h3 class="lf-feature-title">Spice and Wolf Season 2 Confirmed</h3>
+						<span class="lf-feature-source"><i class="fa-brands fa-twitter"></i> @AIR_News01</span>
+						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/spice-and-wolf-season-2.jfif"></img>
+					</a>			
+				</div>
+				<div class="lf-feature">
+					<a class="lf-feature-link" href="https://x.com/AIR_News01/status/1837484628783083909">
+						<h3 class="lf-feature-title">Miss Kobayashi's Dragon Maid Movie 2025</h3>
+						<span class="lf-feature-source"><i class="fa-brands fa-twitter"></i> @AIR_News01</span>
+						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/Dragon-Maid-Movie.jfif"></img>
+					</a>			
+				</div>
+				<div class="lf-feature">
+					<a class="lf-feature-link" href="https://x.com/AnimeDubUpdates/status/1835786363020685315">
+						<h3 class="lf-feature-title">Sound! Euphonium Dub Releas December 17th</h3>
+						<span class="lf-feature-source"><i class="fa-brands fa-twitter"></i> @AnimeDubUpdates</span>
+						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/Sound_Euphonium_dub.jfif"></img>
+					</a>			
+				</div>
+				<!--
+				<div class="lf-feature">
+					<a class="lf-feature-link" href="https://www.animenewsnetwork.com/news/2024-09-15/konosuba-god-blessing-on-this-wonderful-world-3-anime-gets-ova/.215541">
+						<h3 class="lf-feature-title">KonoSuba Season 3 OVA</h3>
+						<span class="lf-feature-source"><i class="fa-solid fa-link"></i> animenewsnetwork.com</span>
+						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/"></img>
+					</a>			
+				</div>									
+				<div class="lf-feature">
 					<a class="lf-feature-link" href="https://www.crunchyroll.com/news/announcements/2024/8/22/overlord-the-sacred-kingdom-north-america-release-date-announced">
 						<h3 class="lf-feature-title">Overlord Movie North American Release</h3>
 						<span class="lf-feature-source"><i class="fa-solid fa-link"></i> Crunchyroll News</span>
 						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/overlordmovie.png"></img>
-					</a>			
-				</div>				
-				<div class="lf-feature">
-					<a class="lf-feature-link" href="https://kitsu.app/posts/9837041">
-						<h3 class="lf-feature-title">Kitsu Now At New Domain Kitsu.app</h3>
-						<span class="lf-feature-source"><i class="fa-solid fa-link"></i> KITSU.APP</span>
-						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/kitsulogo.png"></img>
-					</a>			
+					</a>
 				</div>
+				-->
+
 
 				<div class="lf-list">
 					<h3 class="lf-heading">News</h3>				
