--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 						<div class="tiled-list scrolling-tiled-list">
 							<!-- <a class="tile" href=""><img loading="Lazy" class="tile-image" src="" alt=""></img></a> -->
 							<a class="tile" href="https://kitsu.app/anime/fairy-tail-100-years-quest"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/45159/poster_image/large-ba31c3b38842ea8765313ca889e2600d.jpeg" alt="Fairy Tail: 100 Years Quest"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/re-zero-kara-hajimeru-isekai-seikatsu-3"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/47235/poster_image/large-b79e308fc3bcb76a23199e5c95b92d72.jpeg" alt="Re:ZERO 3"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/re-zero-kara-hajimeru-isekai-seikatsu-3"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/47235/poster_image/large-33a5be2eb6f601cc5bd66918ab6b43a3.jpeg" alt="Re:ZERO 3"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/DAN-DA-DAN"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48269/poster_image/large-589c017798b98c69e3a615ca4191f49d.jpeg" alt="DAN DA DAN"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/ShangriLa-Frontier-2nd-Season"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48677/poster_image/large-a94b224e23285e463dcc2d96276dfb39.jpeg" alt="Shangri-La Frontier Season 2"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/dungeon-ni-deai-wo-motomeru-no-wa-machigatteiru-darou-ka-v"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48216/poster_image/large-aefa90ab3f001b8942d79c459724faf6.jpeg" alt="DanMachi Goddess of the Harvest Arc"></img></a>
@@ -387,6 +387,7 @@
 						<h2 class="section-heading">Binge Watching</h2>
 						<h3 class="section-subheading">Backlog Bingeing</h3> 
 						<div class="tiled-list scrolling-tiled-list">																	
+							<a class="tile" href="https://kitsu.app/anime/seishun-buta-yarou-wa-bunny-girl-senpai-no-yume-wo-minai"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/poster_images/41056/large.jpg?1597698765" alt="Rascal Does Not Dream of Bunny Girl Senpai"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/a-place-further-than-the-universe"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/poster_images/13615/large.jpg?1597696818" alt="A Place Further Than the Universe"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/3-gatsu-no-lion"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/poster_images/11380/large.jpg?1597696842" alt="March comes in like a lion"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/kimi-ni-todoke"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/poster_images/4397/large.jpg" alt="Kimi ni Todoke: From Me to You"></img></a>							
@@ -404,7 +405,6 @@
 							<a class="tile" href="https://kitsu.app/anime/natsume-yuujinchou"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/poster_images/3453/large.jpg" alt="Natsume's Book of Friends"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/boku-no-kokoro-no-yabai-yatsu"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/46299/poster_image/large-116b49ab958abf27bbbb38e9215a0fe1.jpeg" alt="The Dangers in My Heart"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/Dead-Dead-Demons-Dededededestruction-Zenshou"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/45989/poster_image/large-501cec7dd2c71af240b02745256ade91.jpeg" alt="Dead Dead Demon's Dededede Destruction"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/naze-boku-no-sekai-wo-daremo-oboeteinai-no-ka"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/47786/poster_image/large-ed6384832e4aad256106735ddc814825.jpeg" alt="Why nobody remembers my world?"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/make-heroine-ga-oosugiru"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48312/poster_image/large-ef857d4d1a7bbfc872005bd8ec222654.jpeg" alt="Makeine: Too Many Losing Heroines!"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/helck"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/45876/poster_image/large-2b41b177707ddf123c3633f6bb641e4d.jpeg" alt="Helck"></img></a>
 							<!--
@@ -460,8 +460,7 @@
 					</div><!-- Most Anticipated -->				
 					<div class="watching-item"><!--Please Dub -->
 						<h2 class="section-heading">Please Dub!</h2>
-						<div class="tiled-list scrolling-tiled-list">
-							<a class="tile" href="https://kitsu.app/anime/seishun-buta-yarou-wa-bunny-girl-senpai-no-yume-wo-minai"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/poster_images/41056/large.jpg?1597698765" alt="Rascal Does Not Dream of Bunny Girl Senpai"></img></a>
+						<div class="tiled-list scrolling-tiled-list">							
 							<a class="tile" href="https://kitsu.app/anime/wotaku-ni-koi-wa-muzukashii"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/poster_images/13660/large.jpg?1597696908" alt="Wotakoi: Love Is Hard for Otaku"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/skip-to-loafer"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/45520/poster_image/large-bc121442f312da08b24f1a56e2cb2040.jpeg" alt="Skip and Loafer"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/saiki-kusuo-no-psi-nan-2"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/poster_images/13477/large.jpg" alt="The Disastrous Life of Saiki K. 2"></img></a>
@@ -473,13 +472,14 @@
 							<a class="tile" href="https://kitsu.app/anime/kemono-no-souja-erin"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/poster_images/4095/large.jpg" alt="Erin"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/giji-harem"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/47296/poster_image/large-1f3461f7db462aa14d818823209b63ff.jpeg" alt="Pseudo Harem"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/nisekoi"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/poster_images/7821/large.jpg" alt="Nisekoi: False Love"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/kekkon-suru-tte-hontou-desu-ka-365-days-to-the-wedding"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/47586/poster_image/large-f66afbb13a00c3b1e7c1fa126dacf2d9.jpeg" alt="365 Days to the Wedding"></img></a>
 							<!--
 								<a class="tile" href="https://kitsu.app/anime/kishuku-gakkou-no-juliet"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/poster_images/41065/large.jpg?1597691087" alt="Boarding School Juliet"></img></a>
 								<a class="tile" href="https://kitsu.app/anime/5-toubun-no-hanayome-tv"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/47275/poster_image/large-eb4818f7a38a5b9a6e0217e2a2a20db1.jpeg" alt="The Quintessential Quintuplets Special"></img></a>
 								<a class="tile" href="https://kitsu.app/anime/banana-fish"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/poster_images/13988/large.jpg" alt="Banana Fish"></img></a>								
 								<a class="tile" href="https://kitsu.app/anime/otonari-no-tenshisama-ni-itsunomanika-dame-ningen-ni-sareteita-Ken"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/45715/poster_image/large-d863bff0eb6e0e49b30da61229bbd598.jpeg" alt="The Angel Next Door Spoils Me Rotten"></img></a>
 								<a class="tile" href="https://kitsu.app/anime/amaama-to-inazuma"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/poster_images/11870/large.jpg" alt="Sweetness & Lightning"></img></a>
-								<a class="tile" href="https://kitsu.app/anime/kekkon-suru-tte-hontou-desu-ka-365-days-to-the-wedding"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/47586/poster_image/large-f66afbb13a00c3b1e7c1fa126dacf2d9.jpeg" alt="365 Days to the Wedding"></img></a>
+								
 							-->
 						</div><!-- tiled-list -->
 					</div><!-- Please Dub-->
@@ -924,12 +924,12 @@
 							</div>
 						</div>
 					</a>
-					<a class="lf-link" href="https://twitter.com/AniNewsAndFacts">
+					<a class="lf-link" href="https://bsky.app/profile/animenewsandfacts.bsky.social">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/twitterpropic-AniNewsAndFacts.jpg"></img>
 							<div class="lf-text">
 								<span class="lf-displayname">Anime News And Facts</span>
-								<span class="lf-handle"><i class="fa-brands fa-twitter lf-handle-icon"></i> @AniNewsAndFacts</span>
+								<span class="lf-handle"><i class="fa-brands fa-bluesky lf-handle-icon"></i> animenewsandfacts.bsky.social</span>
 							</div>
 						</div>
 					</a>
@@ -1002,12 +1002,12 @@
 							</div>
 						</div>
 					</a>
-					<a class="lf-link" href="https://twitter.com/AnimeDubUpdates">
+					<a class="lf-link" href="https://bsky.app/profile/animedubupdates.bsky.social">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/twitterpropic-AnimeDubUpdates.jpg"></img>
 							<div class="lf-text">
 								<span class="lf-displayname">Anime Dubs</span>
-								<span class="lf-handle"><i class="fa-brands fa-twitter lf-handle-icon"></i> @AnimeDubUpdates</span>
+								<span class="lf-handle"><i class="fa-brands fa-bluesky lf-handle-icon"></i> animedubupdates.bsky.social</span>
 							</div>
 						</div>
 					</a>
